added exception handler for CustomAccessDeniedHandler

--- a/src/main/resources/templates/access-denied.html
+++ b/src/main/resources/templates/access-denied.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <!--<p th:text="'Hello, ' + ${name} + '!'" />-->
-<p th:text="'Some use secret info'" />
+<p>
+    Custom access denied!!!!
+</p>
 </body>
 </html>
